syntax = "proto3";
package navajo;
import "proto/status.proto";

message AesGcmKeys {
    repeated AesGcm keys = 1;
}

message AesGcm {
    uint32 id = 1;
    string pub_id = 2;
    Status status = 3;
    bytes key = 4;
}