syntax = "proto3";
package navajo;
import "proto/status.proto";

message ChaCha20Poly1305 {
    uint32 id = 1;
    string pub_id = 2;
    Status status = 3;
    bytes key = 4;
}

message ChaCha20Poly1305Keys {
    repeated ChaCha20Poly1305 keys = 1;
}