syntax = "proto3";
package navajo;

message Ed25519Keys {
    repeated Ed25519 keys = 1;
}

message Ed25519 {
    string key_id = 1;
    bytes private_key = 2;
    bytes public_key = 3;
}