syntax = "proto3";

package navajo;

import "proto/aead.proto";
import "proto/daead.proto";
import "proto/mac.proto";
import "proto/hybrid.proto";
import "proto/signature.proto";

message Keyset {
    message Keys {
        oneof primitive {
            Aead aead = 1;
            Daead daead = 2;
            Mac mac = 3;
            Hybrid hybrid = 4;
            Signature signature = 5;
        }
    }
    uint32 primary_key_id = 1;
}